tests/neg/i15414.scala
class C()
object C {
  val c = apply() // error
}